# matrixlib

./: README.md  matrix_ops.cpp  requirements.txt  setup.py  test_matrix_ops.py
matrixlib/: pyproject.toml  setup.py
matrixlib/matrixlibsetup/: __init__.py  utils.py
matrixlib/src/: matrix.cpp
