[build-system]
requires = ["setuptools>=61.0", "wheel", "pybind11>=2.6"]
build-backend = "setuptools.build_meta"

[project]
name = "matrixlib"
version = "0.1.0"
description = "A matrix and vector computation library with C++ backend"
authors = [{name = "Example Author", email = "author@example.com"}]
readme = "README.md"
requires-python = ">=3.6"
dependencies = ["pybind11>=2.6"]